@@ -322,9 +322,7 @@
 #define wxUSE_STC 0
 
 
-#ifndef wxUSE_GRAPHICS_CONTEXT
 #define wxUSE_GRAPHICS_CONTEXT 0
-#endif
 
 
 #define wxUSE_CONTROLS     0
