@@ -480,6 +480,7 @@ All (GUI):
   where possible.
 - wxRTC: corrected centring and right-justification spacing.
 - Added wxBORDER_THEME to XRC.
+- wxGraphicsContext is now enabled by default if supported by the platform.
 
 GTK:
 
